<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">105 Unofficial</string>
    <string name="menu_home">Radio 105</string>
    <string name="menu_podcast">Podcast</string>
    <string name="menu_tv">105 TV</string>
    <string name="menu_zoo">The 105 Zoo</string>
    <string name="streaming">Start Streaming</string>
    <string name="pause_streaming">Pause Streaming</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="logo">105 Logo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="radio">105 FM Radio Streaming</string>
    <string name="error">Media player error! Resetting.</string>
    <string name="preferences_reconnect">Streaming Recovery</string>
    <string name="preferences_stop_service">Stop/Pause Streaming Service</string>
    <string name="preferences_theming">App and Notification Theme</string>
    <string name="preferences_webviews">Podcast and Zoo sections</string>
    <string name="blank_line" translatable="false">" "</string>
    <string name="copyright" translatable="false">copyright</string>
    <string name="copyright_info">&#169; Radio 105 and  Radio 105 logo &#8482; are property of RadioMediaset SpA. All rights reserved.</string>
    <string name="menu_developer">Developer Info</string>
    <string name="do_not_show_again">Don\' t show again.</string>
    <string name="tv_screen_on">In this section the device screen will stay ON regardless Android screen timeout setting.</string>
    <string name="important">Important</string>
    <string name="podcast_service">105 Podcast</string>
    <string name="zoo_service">The 105 Zoo</string>
    <string name="debug_dialog">To enable or disable debugging and logging functions the App must be restarted. Restart now?</string>
    <string name="theme_title">Select Theme</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_default_value" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="service_kill_key" translatable="false">service_kill</string>
    <string name="service_kill_title">Stop streaming settings</string>
    <string name="service_kill_summary_on">Radio streaming will be stopped when app is cleared from recent apps</string>
    <string name="service_kill_summary_off">Radio streaming must be stopped manually clicking on "Stop Streaming" button</string>
    <string name="noisy_key" translatable="false">noisy_key</string>
    <string name="noisy_key_summary_off">Streaming will not stop when an audio device is disconnected</string>
    <string name="noisy_key_summary_on">Streaming will stop when an audio device is disconnected</string>
    <string name="noisy_key_title">Audio Device Settings</string>
    <string name="thanks_key" translatable="false">thanks</string>
    <string name="special_thanks">Special Thanks</string>
    <string name="special_thanks_title">Special Thanks To:</string>
    <string name="icons"><a href="https://pngio.com/png">PngIO</a>, <a href="https://iconape.com/">Icon Ape</a> and <a href="https://www.iconninja.com/">Icon Ninja</a> for icons</string>
    <string name="mediaset"><a href="https://www.mediasetplay.mediaset.it/">Mediaset Play</a> for video streaming</string>
    <string name="unitedradio"><a href="https://www.unitedmusic.com/">Unitedradio</a> for radio streaming</string>
    <string name="google"><a href="https://www.google.com/">Google</a> for the example in their really old SDK</string>
    <string name="stackoverflow"><a href="https://stackoverflow.com/">StackOverflow</a> (as ever) for all hints and suggestions</string>
    <string name="jhey"><a href="https://codepen.io/jh3y">Jhey</a> for the custom 404 error page</string>
    <string name="adblockplus"><a href="https://github.com/adblockplus/libadblockplus-android">Adblockplus</a> for their WebView version with ad blocker</string>
    <string name="tinyPng"><a href="https://tinypng.com/">TinyPng</a> for shrinking my PNG drawables</string>
    <string name="social"><a href="https://github.com/saschpe/android-social-fragment">Sascha Peilicke</a> for his Android Social Fragment that inspired me</string>
    <string name="mockups"><a href="https://mockuphone.com/">MockUPhone</a> for device mockups in screenshots</string>
    <string name="tester">All my friends that tested my app in these months, for their support, suggestions and bug reports :)</string>
    <string name="rabbit" translatable="false">A rabbit life</string>
    <string name="bb" tools:ignore="TypographyDashes">Created and Produced by \nB--B</string>
    <string name="loading">Loading…</string>
    <string name="playing">Playing</string>
    <string name="in_pause">Pause</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="webviews_themes_key" translatable="false">webviews_themes</string>
    <string name="webviews_themes_title">Themes</string>
    <string name="webviews_themes_summary_on">Podcast and The 105 Zoo sections will be themed according to app/phone theme</string>
    <string name="webviews_themes_summary_off">Podcast and The 105 Zoo sections will use the standard theme from official web sites</string>
    <string name="https_key" translatable="false">use_https</string>
    <string name="https_title">HTTPS/HTTP Connection</string>
    <string name="https_summary_on">Radio streaming service will use an HTTPS connection</string>
    <string name="https_summary_off">Radio streaming service will use an HTTP connection</string>
    <string name="screen_on_key" translatable="false">screen_on</string>
    <string name="screen_on_title">Screen Always On</string>
    <string name="screen_on_summary_on">Screen will stay always on in Podcast/The 105 Zoo section</string>
    <string name="screen_on_summary_off">Screen will regularly turns off in Podcast and The 105 Zoo sections</string>
    <string name="post_callback_key" translatable="false">post_callback_compat</string>
    <string name="post_callback_title">[DEPRECATED] WebViews postVisualStateCallback</string>
    <string name="post_callback_summary_on">WebViews will use a postVisualStateCallback for set visibility when page is loaded in Podcast/Zoo sections.</string>
    <string name="post_callback_summary_off">WebViews will use a safe way for set visibility when the page is loaded in Podcast/Zoo sections. This method is slower and can cause sporadic graphical glitches.</string>
    <string name="unsupported_title">Link not supported</string>
    <string name="unsupported_description">The link you clicked is not supported in this app but you can open it with your default browser app</string>
    <string name="cancel">Cancel</string>
    <string name="open_browser">Open in Browser</string>
    <string name="storage_access_required">Storage access is required to download files.</string>
    <string name="ok">OK</string>
    <string name="storage_permission_granted">Storage permission was granted. Starting download.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="post_notification_required">Post notification permission is required for notification.</string>
    <string name="notification_permission_granted">Post notification permission granted.</string>
    <string name="notification_permission_denied">Post notification permission denied, this will probably break the streaming service.</string>
    <string name="reconnect_key" translatable="false">reconnect_stream</string>
    <string name="no_reconnect">Internet not available, reconnection failed</string>
    <string name="reconnect">Internet available, trying to restart the stream</string>
    <string name="reconnect_summary_off">App will not try to reconnect Radio stream automatically after a media error</string>
    <string name="reconnect_summary_on">App will try to automatically restart the stream if a media player audio occur and an internet connection is available</string>
    <string name="reconnect_title">Restart Radio stream</string>
    <string name="debug_key" translatable="false">debugging</string>
    <string name="debug">Debugging</string>
    <string name="debugging_title">Debug and logging</string>
    <string name="debugging_summary_on">Debug and logging enabled</string>
    <string name="debugging_summary_off">Debug and logging disabled</string>
    <string name="contact">Contacts</string>
    <string name="follow">Follow</string>
    <string name="follow_zoo">Follow The 105 Zoo</string>
    <string name="follow_on_twitter">Follow on Twitter</string>
    <string name="follow_on_instagram">Follow on Instagram</string>
    <string name="follow_on_tiktok">Follow on TikTok</string>
    <string name="join_facebook_group">Like the Facebook page</string>
    <string name="send_email">Send e-mail</string>
    <string name="menu_socials">Social</string>
    <string name="whatsapp_message">Send a whatsapp message</string>
    <string name="telegram_message">Send a telegram message</string>
    <string name="sms_message">Send an SMS</string>
    <string name="youtube_channel">YouTube channel</string>
    <string name="twitch_account">Twitch account</string>
    <string name="fumagazzi_clocks">Fumagazzi clocks</string>
    <string name="wine_zoo">The 105 Zoo wine shop</string>
    <string name="mr_marketta">Mr Marketta</string>
    <string name="mazzoli_masterclass">Marco Mazzoli Masterclass</string>
    <string name="zootube">ZooTube</string>
    <string name="join_facebook_group_zoo">Follow The 105 Zoo on Facebook</string>
    <string name="follow_on_instagram_zoo">Follow The 105 Zoo on Instagram</string>
    <string name="radio_105">Radio 105</string>
    <string name="notification_type_key" translatable="false">notification_type</string>
    <string name="notification_type_off">The app will use a standard notification when running the Radio Streaming</string>
    <string name="notification_type_on">The app will use multimedia notification when running the Radio Streaming</string>
    <string name="notification_type_title">Notification type</string>
    <string name="app_pref_key" translatable="false">app_pref</string>
    <string name="webviews_pref_key" translatable="false">webviews_pref</string>
    <string name="preference_key" translatable="false">preference</string>
    <string name="streaming_pref_key" translatable="false">streaming_pref</string>
    <string name="miui_emui_pref_key" translatable="false">miui_emui_pref</string>
    <string name="miui_emui_dialog_key" translatable="false">miui_emui_dialog</string>
    <string name="miui_emui_dialog">MiUi and EMUI Devices</string>
    <string name="miui_logo" translatable="false">MiUi Logo</string>
    <string name="emui_logo" translatable="false">EMUI Logo</string>
    <string name="miui_emui_dialog_text_part_1">If the radio streaming service stops when in background or clearing recent apps please read this before report a bug:</string>
    <string name="miui_emui_dialog_text_part_2">In MiUi and EMUI roms the streaming service can be killed from system (often from their custom battery service) or from user simply removing the app from recent (in stock AOSP the app gets closed, but the service is NOT killed). There\'s no way to work around this behaviour from the app side, if the app gets killed when in background <b><u>the user must manually disable the battery optimisation for the app.</u></b> Also, for keeping the service alive when a recent tasks cleaning is performed, <b><u>the app must be manually pinned in recent app list.</u></b></string>
    <string name="miui_emui_instructions">MiUi/EMUI Instructions</string>
    <string name="experimental_key" translatable="false">experimental_options_key</string>
    <string name="experimental">Experimental Options</string>
</resources>