<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:defaultValue="@string/theme_default_value"
        app:entries="@array/theme_entries"
        app:entryValues="@array/theme_values"
        app:key="@string/theme_key"
        app:title="@string/theme_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="@string/service_kill_key"
        app:summaryOff="@string/service_kill_summary_off"
        app:summaryOn="@string/service_kill_summary_on"
        app:title="@string/service_kill_title"
        app:defaultValue="false"
        />

    <SwitchPreferenceCompat
        app:key="@string/noisy_key"
        app:summaryOff="@string/noisy_key_summary_off"
        app:summaryOn="@string/noisy_key_summary_on"
        app:title="@string/noisy_key_title"
        app:defaultValue="true"/>

    <SwitchPreferenceCompat
        app:key="@string/notification_key"
        app:summaryOff="@string/notification_key_summary_off"
        app:summaryOn="@string/notification_key_summary_on"
        app:title="@string/notification_key_title"
        app:defaultValue="false"/>

    <SwitchPreferenceCompat
        app:key="@string/screen_on_key"
        app:summaryOff="@string/screen_on_summary_off"
        app:summaryOn="@string/screen_on_summary_on"
        app:title="@string/screen_on_title"
        app:defaultValue="false"/>

    <Preference
        app:key="@string/thanks"
        app:title="@string/special_thanks" />
</PreferenceScreen>
