<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_radio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_menu_tv"
            android:title="@string/menu_tv" />
        <item
            android:id="@+id/nav_podcast"
            android:icon="@drawable/ic_menu_podcast"
            android:title="@string/menu_podcast" />
        <item
            android:id="@+id/nav_zoo"
            android:icon="@drawable/ic_menu_zoo"
            android:title="@string/menu_zoo" />
        <item
            android:id="@+id/nav_socials"
            android:icon="@drawable/ic_menu_social"
            android:title="@string/menu_socials" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/nav_developer"
            android:title="@string/menu_developer" />
    </group>
</menu>
