<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bb.radio105.RadioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_radio" />

    <fragment
        android:id="@+id/nav_tv"
        android:name="com.bb.radio105.TvFragment"
        android:label="@string/menu_tv"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/nav_podcast"
        android:name="com.bb.radio105.PodcastFragment"
        android:label="@string/menu_podcast"
        tools:layout="@layout/fragment_podcast" />

    <fragment
        android:id="@+id/nav_zoo"
        android:name="com.bb.radio105.ZooFragment"
        android:label="@string/menu_zoo"
        tools:layout="@layout/fragment_zoo" />

    <fragment
        android:id="@+id/nav_socials"
        android:name="com.bb.radio105.SocialFragment"
        android:label="@string/menu_socials"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.bb.radio105.Settings2Fragment"
        android:label="@string/title_activity_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_developer"
        android:name="com.bb.radio105.DeveloperFragment"
        android:label="@string/menu_developer"
        tools:layout="@layout/fragment_developer" />
</navigation>
