<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Sascha Peilicke
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SocialFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/follow_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/follow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/open_facebook_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/join_facebook_group"
            app:drawableStartCompat="@drawable/ic_facebook"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_title" />

        <TextView
            android:id="@+id/follow_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/follow_on_twitter"
            app:drawableStartCompat="@drawable/ic_twitter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open_facebook_group" />

        <TextView
            android:id="@+id/follow_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/follow_on_instagram"
            app:drawableStartCompat="@drawable/ic_instagram"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_twitter" />

        <TextView
            android:id="@+id/twitch_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/twitch_account"
            app:drawableStartCompat="@drawable/ic_twitch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_instagram" />

        <TextView
            android:id="@+id/follow_tiktok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/follow_on_tiktok"
            app:drawableStartCompat="@drawable/ic_tiktok"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twitch_account" />

        <TextView
            android:id="@+id/youtube_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/youtube_channel"
            app:drawableStartCompat="@drawable/ic_youtube"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_tiktok" />

        <View style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_channel" />

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/contact"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_channel" />

        <TextView
            android:id="@+id/send_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/send_email"
            app:drawableStartCompat="@drawable/ic_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_title" />

        <TextView
            android:id="@+id/whatsapp_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/whatsapp_message"
            app:drawableStartCompat="@drawable/ic_whatsapp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_mail" />

        <TextView
            android:id="@+id/telegram_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/telegram_message"
            app:drawableStartCompat="@drawable/ic_telegram"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whatsapp_message" />

        <TextView
            android:id="@+id/sms_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/sms_message"
            app:drawableStartCompat="@drawable/ic_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telegram_message" />

        <View style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sms_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>